--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <script>
+         console.log("▌▘▘▌▘▌▘▘▘▌▌▖▌▌▘▘▖▌▌▖▖▘▖▌▌▖▘▖▖▌▖▌▖▘▘▌▘▌▌▘▘▖▖▌▘▖▘▘▖▖▘▘▘▖▘▖▌▌▘▖▖▌▌▘▖▖▌▖▖▌▌▖▘▌▘▘▖▌▘▖▌▘▌▌▖▘▖▌▖▌▌▖▘▖▘▌▘▘▖▌▖▘▌▖▘");
+        </script>
 
     </head>
     <body class="bg-zinc-800 text-sky-200 h-screen flex flex-wrap font-mono">
