Added language switcher

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
         </script>
 
     </head>
-    <body class="bg-zinc-800 text-sky-200 h-screen flex flex-wrap font-mono">
+    <body class="bg-zinc-800 text-sky-200 h-screen font-mono">
         {{ partial "navigation.html" . }}
 
         <main class="md:self-center grow px-5 sm:px-30 md:px-5 lg:px-30 xl:px-50 2xl:px-100 py-5 max-w-screen">
