Add imprint/attributions/privacy page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,12 @@
 @import "tailwindcss";
 @source "hugo_stats.json";
+
+.markdown {
+    p {
+        padding-top: 2ex;
+    }
+
+    li {
+        list-style: inside;
+    }
+}
