--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -6,7 +6,7 @@
         }}
         {{ with . | css.TailwindCSS $opts }}
             {{ if hugo.IsProduction }}
-                {{ with . | fingerprint }}
+                {{ with . | fingerprint "sha512" }}
                     <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
                 {{ end }}
             {{ else }}
