--- a/themes/transnrw/layouts/_markup/render-heading.html
+++ b/themes/transnrw/layouts/_markup/render-heading.html
@@ -1,5 +1,5 @@
 
-<h{{ .Level }} id="{{ .Anchor }}" class="font-bold  pt-[1.5em] {{- with .Attributes.class }} {{ . }} {{- end }} text-[{{ math.Max 1.0 (math.Mul 2.0 (math.Div (math.Sub 6 .Level) 5.0)) }}rem]">
+<h{{ .Level }} id="{{ .Anchor }}" class="font-bold  pt-[1.5em] {{- with .Attributes.class }} {{ . }} {{- end }} text-[{{ math.Max 1.0 (math.Mul 2.0 (math.Div (math.Sub 6 .Level) 5.0)) }}rem] hyphens-auto wrap-break-word">
     {{- .Text -}}
 </h{{ .Level }}>
 
