--- a/themes/transnrw/layouts/_partials/footer.html
+++ b/themes/transnrw/layouts/_partials/footer.html
@@ -1,10 +1,4 @@
-<footer class="mx-5 sm:mx-30 md:mx-5 lg:mx-30 xl:mx-50 2xl:mx-100 my-5 md:self-center grow text-zinc-500 grid md:grid-cols-2 md:gap-8 content-start">
-    <div>
-        <h2 class="font-bold text-lg">{{ T "footer.links" }}</h2>
-        <ul id="socials">
-            <li class="inline"><a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL }}">{{ T "footer.forum" }}</a></li>
-        </ul>
-    </div>
+<footer class="text-zinc-500">
     {{ with .GetPage "/legal/" }}
     <div>
         <h2 class="font-bold text-lg pt-[1ex] md:pt-0">{{ T "footer.legals" }}</h2>
