--- a/themes/transnrw/layouts/_partials/navigation.html
+++ b/themes/transnrw/layouts/_partials/navigation.html
@@ -1,13 +1,12 @@
 
 
-<nav class="mx-5 sm:mx-30 md:mx-5 lg:mx-30 xl:mx-50 2xl:mx-100 my-5 md:self-center text-zinc-500 flex">
+<nav class="py-2 my-3 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1] sticky top-0 bg-inherit">
 
-
-    <button id="home" class="group shrink ">
         {{ with $.Site.Home }}
         <a href="{{ .RelPermalink }}">Home</a>
         {{ end }}
-    </button>
-{{ partial "allLanguages.html" . }}
+<!--
+    {{ partial "allLanguages.html" . }}
+-->
 </nav>
 
