Add word breaking on an earlier node

--- a/themes/transnrw/layouts/baseof.html
+++ b/themes/transnrw/layouts/baseof.html
@@ -15,7 +15,7 @@
         </script>
 
     </head>
-    <body class="m-5 bg-zinc-800 text-sky-200 font-mono" lang="de">
+    <body class="hyphens-auto wrap-break-word m-5 bg-zinc-800 text-sky-200 font-mono" lang="de">
 
         {{ partial "logo.html" . }}
         {{ partial "navigation.html" . }}
