--- a/themes/transnrw/layouts/_partials/socials.html
+++ b/themes/transnrw/layouts/_partials/socials.html
@@ -1,7 +1,10 @@
 
-<div class="py-2 my-3 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1]">
+<div class="py-2 my-3 border-solid border-x-0 border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1]">
     <h2 class="font-bold text-lg">{{ T "footer.links" }}</h2>
     <ul id="socials">
-        <li class="inline"><a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL }}">{{ T "footer.forum" }}</a></li>
+        <li class="inline">
+            <a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL }}" title="{{ T "footer.forum" }}">
+                <img class="w-10" src="/images/mybb_logomark-white-400h.png" alt="MyBB Logo" />
+            </a></li>
     </ul>
 </div>
