--- a/themes/transnrw/layouts/baseof.html
+++ b/themes/transnrw/layouts/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         {{partialCached "css.html" . }}
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
         </script>
 
     </head>
-    <body class="hyphens-auto wrap-break-word m-5 bg-zinc-800 text-sky-200 font-mono" lang="de">
+    <body class="hyphens-auto wrap-break-word m-5 bg-zinc-800 text-sky-200 font-mono">
 
         {{ partial "logo.html" . }}
         {{ partial "navigation.html" . }}
@@ -25,7 +25,6 @@
                 {{ end }}
         </main>
 
-        {{ partial "socials.html" . }}
 
         {{ partial "footer.html" . }}
     </body>
