Add text to forum icon

--- a/themes/transnrw/layouts/_partials/socials.html
+++ b/themes/transnrw/layouts/_partials/socials.html
@@ -5,8 +5,9 @@
         <ul id="socials">
             <li class="inline">
                 <a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL }}" title="{{ T "footer.forum" }}">
-                    <img class="w-10" src="/images/mybb_logomark-white-400h.png" alt="MyBB Logo" />
-                </a></li>
+                    <img class="w-10 inline" src="/images/mybb_logomark-white-400h.png" alt="MyBB Logo" />{{ T "footer.forum" }}
+                </a>
+            </li>
         </ul>
     </div>
 
