--- a/themes/transnrw/layouts/_partials/navigation.html
+++ b/themes/transnrw/layouts/_partials/navigation.html
@@ -1,12 +1,14 @@
 
 
-<nav class="py-2 my-3 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1] sticky top-0 bg-inherit">
+<nav class="py-2 my-3 border-x-0 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1] sticky top-0 bg-inherit grid grid-cols-3">
 
-        {{ with $.Site.Home }}
-        <a href="{{ .RelPermalink }}">Home</a>
-        {{ end }}
-<!--
-    {{ partial "allLanguages.html" . }}
--->
+    {{ with $.Site.Home }}
+    <a class="grid-1" href="{{ .RelPermalink }}">Home</a>
+    {{ end }}
+    <div class="grid-2">
+    </div>
+    <div class="grid-3 justify-self-end">
+        {{ partial "allLanguages.html" . }}
+    </div>
 </nav>
 
