--- a/themes/transnrw/layouts/_partials/footer.html
+++ b/themes/transnrw/layouts/_partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="md:order-5 md:col-span-2">
     {{ with .GetPage "/legal/" }}
     <div class="text-zinc-400">
         <h2 class="font-bold text-lg pt-[1ex] md:pt-0">{{ T "footer.legals" }}</h2>
