--- a/themes/transnrw/layouts/_partials/logo.html
+++ b/themes/transnrw/layouts/_partials/logo.html
@@ -1,5 +1,5 @@
 
-<header class="">
+<header class="md:order-1 h-fit">
     <div class=" overflow-hidden w-[256px] h-[256px] m-auto">
         <img src="/images/draft1.png" alt="Logo of identiT. The text identiT is displayed in the front with a transsymbol containing a fist. In the background is the transflag.">
     </div>
