--- a/themes/transnrw/layouts/_partials/socials.html
+++ b/themes/transnrw/layouts/_partials/socials.html
@@ -1,5 +1,5 @@
 
-<footer>
+<footer class="md:order-4 md:basis-1/4">
     <div class="py-2 my-3 border-solid border-x-0 border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1]">
         <h2 class="font-bold text-lg">{{ T "footer.links" }}</h2>
         <ul id="socials">
