Fix image sizing for md

--- a/themes/transnrw/layouts/_partials/logo.html
+++ b/themes/transnrw/layouts/_partials/logo.html
@@ -1,6 +1,6 @@
 
 <header class="md:order-1 h-fit min-height-fit">
-    <div class=" overflow-hidden w-[256px] h-[256px] m-auto">
+    <div class=" overflow-hidden w-[256px] h-[256px] m-auto md:w-auto md:h-auto">
         <img src="/images/draft1.png" alt="Logo of identiT. The text identiT is displayed in the front with a transsymbol containing a fist. In the background is the transflag.">
     </div>
 </header>
