--- a/themes/transnrw/layouts/_partials/navigation.html
+++ b/themes/transnrw/layouts/_partials/navigation.html
@@ -1,13 +1,12 @@
 
 
-<nav class="py-2 my-3 border-x-0 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1] sticky top-0 bg-inherit grid grid-cols-3 md:order-3 md:basis-1/4 h-fit min-h-fit">
+<nav class="py-2 my-3 border-x-0 border-solid border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1] sticky top-0 bg-inherit  md:order-3 md:basis-1/4 h-fit min-h-fit">
 
     {{ with $.Site.Home }}
-    <a class="grid-1" href="{{ .RelPermalink }}">Home</a>
+    <a href="{{ .RelPermalink }}">{{ T "nav.home" }}</a>
     {{ end }}
-    <div class="grid-2">
-    </div>
-    <div class="grid-3 justify-self-end">
+    <a href="{{ .Site.Params.identiT.Map.URL }}" target="_blank">{{ T "nav.communitymap" }}</a>
+    <div class="justify-self-end float-right">
         {{ partial "allLanguages.html" . }}
     </div>
 </nav>
