--- a/themes/transnrw/assets/css/main.css
+++ b/themes/transnrw/assets/css/main.css
@@ -1,7 +1,17 @@
 @import "tailwindcss";
 @source "hugo_stats.json";
 
-.markdown {
+
+
+@theme {
+    --trans-blue: #5bcefa;
+    --trans-pink: #f5a9b8;
+    --white: #fff;
+
+    --trans-flag: linear-gradient(90deg,var(--trans-blue) 0%,var(--trans-blue) 20%,var(--trans-pink) 20%,var(--trans-pink) 40%,var(--white) 40%,var(--white) 60%,var(--trans-pink) 60%,var(--trans-pink) 80%,var(--trans-blue) 80%,var(--trans-blue) 100%);
+}
+
+main {
     p {
         padding-top: 2ex;
     }
@@ -10,4 +20,20 @@
         list-style: disc;
         margin-left: 2ex;
     }
+}
+
+a {
+    text-decoration: dotted;
+    text-decoration-line: underline;
+}
+
+a:focus, a:hover {
+    color: transparent;
+    background-image: var(--trans-flag);
+    background-clip: text;
+    transition: color .2s;
+    border-color: unset;
+    border-image: var(--trans-flag) 1 1;
+    border-width: 0 0 2px;
+    text-decoration: none;
 }
