--- a/themes/transnrw/layouts/_partials/socials.html
+++ b/themes/transnrw/layouts/_partials/socials.html
@@ -1,6 +1,6 @@
 
 <footer class="md:order-4">
-    <div class="py-2 my-3 border-solid border-x-0 border-2 [border-image:linear-gradient(to_right,#5bcefa,#f5a9b8)_40_1]">
+    <div class="py-2 my-3 border-solid border-x-0 border-2 [border-image:var(--trans-gradient)_1_1]">
         <h2 class="font-bold text-lg">{{ T "footer.links" }}</h2>
         <ul id="socials">
             <li class="inline">
