--- a/themes/transnrw/layouts/baseof.html
+++ b/themes/transnrw/layouts/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" dir="ltr">
     <head>
         {{partialCached "css.html" . }}
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
