--- a/themes/transnrw/layouts/baseof.html
+++ b/themes/transnrw/layouts/baseof.html
@@ -15,7 +15,7 @@
         </script>
 
     </head>
-    <body class="hyphens-auto wrap-break-word m-5 bg-zinc-800 text-sky-200 font-mono sm:w-3/4 sm:m-auto md:w-auto md:m-5 md:grid md:grid-cols-3 md:gap-3 lg:w-200 lg:mx-auto">
+    <body class="hyphens-auto wrap-break-word m-5 bg-zinc-800 text-sky-200 font-mono sm:w-3/4 sm:m-auto md:w-auto md:m-5 md:grid md:grid-cols-3 md:gap-3 lg:w-200 lg:mx-auto bg-[url(/images/background.png)]">
 
         {{ partial "logo.html" . }}
         {{ partial "navigation.html" . }}
