Make nav bg inherit from body

--- a/themes/transnrw/layouts/baseof.html
+++ b/themes/transnrw/layouts/baseof.html
@@ -20,7 +20,7 @@
         {{ partial "logo.html" . }}
         {{ partial "navigation.html" . }}
 
-        <main class="md:order-2 md:row-start-1 md:row-end-16 md:col-start-2 md:col-end-4 ">
+        <main class="md:order-2 md:row-start-1 md:row-end-16 md:col-start-2 md:col-end-4 z-5">
                 {{ block "main" . }}
                 {{ end }}
         </main>
