--- a/themes/transnrw/layouts/_partials/socials.html
+++ b/themes/transnrw/layouts/_partials/socials.html
@@ -4,8 +4,13 @@
         <h2 class="font-bold text-lg">{{ T "footer.links" }}</h2>
         <ul id="socials">
             <li class="inline">
-                <a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL }}" title="{{ T "footer.forum" }}">
+                <a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Forum.URL | safeURL }}" title="{{ T "footer.forum" }}">
                     <img class="w-10 inline" src="/images/mybb_logomark-white-400h.png" alt="MyBB Logo" />{{ T "footer.forum" }}
+                </a>
+            </li>
+            <li class="inline">
+                <a class="underline decoration-dotted" target="_blank" href="{{ .Site.Params.identiT.Teamspeak.URL | safeURL }}" title="{{ T "footer.teamspeak" }}">
+                    <img class="w-10 inline" src="/images/teamspeak-new-logo--v2.png" alt="MyBB Logo" />{{ T "footer.teamspeak" }}
                 </a>
             </li>
         </ul>
